<resources>
    <string name="app_name">Explore Switzerland</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_search">Search destination</string>
    <string name="title_section4">Symbols of Switzerland</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="hint_search"><i>Search destination</i></string>
    <string name="title_activity_tab_proba">TabProbaActivity</string>
    <string name="tab_symbols_of_switzerland">Symbols of Switzerland</string>
    <string name="tab_about_switzerland">About Switzerland</string>
    <string name="tab_explore_cantons_a">Explore</string>
    <string name="tab_explore_cantons_b">cantons</string>
    <string name="title_activity_tab_layout">Tab Layout Activity</string>
    <string name="title_my_tab_factory">My tab factory</string>
    <string name="title_explore_fragment">Explore Fragment</string>
    <string name="title_about_fragment">About fragment</string>
    <string name="title_symbols_fragment">Symbols fragment</string>
    <string name="title_my_sample_fragment">My sample fragment</string>
    <string name="title_my_page_adapter">My page adapter</string>
    <string name="title_activity_cantons_luzern">CantonsLuzern</string>
    <string name="about_text_bg"><b>Switzerland</b> (German: Schweiz, French: Suisse, Italian: Svizzera, Romansch: Svizra, Latin: Confoederatio Helvetica) is a landlocked country in Central Europe. It has borders with France to the west, Italy to the south, Austria and Liechtenstein to the east and Germany to the north.</string>
    <string name="about_climate_title">CLIMATE</string>
    <string name="about_text_climate">The climate is temperate, but varies with altitude. Switzerland has cold, cloudy, rainy/snowy winters and cool to warm, cloudy, humid summers with occasional showers.</string>
    <string name="about_politics_title">POLITICS</string>
    <string name="about_text_dialects_a">Remark: All Swiss cities, villages, regions, 
or whatever geographical object do have 
official spellings in all four national 
languages; sometimes they are just the 
same. However, major cities and touristic 
regions also know official English spellings. 
Nevertheless, only a few years ago, the 
official Swiss tourism office started to 
advertise major spots and cities with their 
original, local spelling; with some 
exceptions of course, such as Geneva and 
Zurich for example. Obviously, it was too 
disturbing for anglo-saxon tourists to 
remember all the different spellings. But 
their real spellings are really important to 
the locals and helpful to know as a tourist 
of the respective region. So therefore, the 
following list will present you the 
advertised spelling first, followed with its 
local spelling, if different, then its English 
version, if different, and its other national 
spellings.
You could even enlarge this lists with other 
different, but hardly anymore used or even 
outdated spellings in other national 
languages (e.g. Bellinzona used to be 
spelled Bellenz in German or Bellence in
 French, or even more oudated: Lugano 
was known as Lauis in German). And this 
can even get escalated if you would want to 
refer to the different spellings of the 
different dialects in the different national 
language regions of Switzerland: the many 
21+ Swiss-German dialects, the four 
Romansh dialects, the Franco-Provençal 
from the French speaking Switzerland, or 
the Lombard in Ticino.
And how to speak them is even another 
issue, since even if they are written the 
same, they are quite often not spoken the 
same way in the different 
languages/dialects, of course.</string>
    <string name="about_text_dialects_basel">Basel (ger ; eng: Basle (somehow outdated, however still used in the English press); fre: Bâle; ita/roh: Basilea) — the traveller\'s gateway to the German Rhineland and French Alsace with an exceptional medieval downtown at the knee of the Rhine river; excellent museums (~40) and art\'s mecca during ART BASEL, world\'s largest art fair; also famous for its huge and contemplating carnival around February (Basler Fasnacht); German-speaking world wide renowned theatre (including opera and ballet).</string>
    <string name="about_text_dialects_bellinzona">Bellinzona (ita/eng/ger/roh ; fre: 
Bellinzone) — renowned for its medieval 
castles, world UNESCO heritage, pretty 
center and capital of the canton of Ticino, 
overlooking one of the few flat rural areas 
of Switzerland towards Lake Maggiore.</string>
    <string name="about_text_dialects_chur">Chur (ger ; roh: Cuira; eng/fre: Coire; ita: 
Coira) — capital of the canton of Grisons 
(ger: Kanton Graubünden; roh: Chantun 
Grischun; ita: Cantone dei Grigioni), the 
only trilingual Swiss canton, in the 
east-south of Switzerland, dates back 
almost 4000 years; lovely old town; gate to 
several glitzy ski and hiking resorts, such 
as St. Moritz, Davos, Arosa, Lenzerheide, 
Flims/Laax and many more; major hub to 
the Glacier Express and the Bernina Express.</string>
    <string name="about_text_dialects_bern">Bern (ger ; eng/fre: Berne; ita/roh: Berna) — 
capital of Switzerland at the shores of the 
cristal-clear green-blue Aare river with an 
amazingly well preserved old-town with 
arcades along almost every street; great 
restaurants abound, as do bars and clubs.</string>
    <string name="about_text_dialects_geneva">Geneva (eng ; fre: Genève; ger: Genf; ita: 
Ginevra; roh: Genevra) — this centre of arts 
and culture is an international city that is 
home to around 200 governmental and 
non-governmental organizations (with 
some major UN organizations) at the end o
f Lake Geneva (Lac Léman flows into the 
river Rhône), founding place of Calvinism 
and THE Red Cross (ICRC); almost every 
second inhabitant is a foreigner.</string>
    <string name="about_text_dialects_interlaken">Interlaken (ger/eng/fre/ita/roh) — the 
outdoor and action sports capital of 
Switzerland; anything from skydiving, 
bungee jumping, hiking, white-water 
rafting, to canyoning; between the two lakes 
Brienz and Thun; starting point for many, 
many tourists for excursions into the 
Bernese Alps.</string>
    <string name="about_text_dialects_lausanne">Lausanne (fre/eng/ger ; ita/roh: Losanna) 
— scenery, dining, dancing, boating and the 
Swiss wine-country are the draws at the 
shores of the great Lake Geneva (Lac 
Léman) with a view of Swiss and French 
Alps; world-wide renowned for its Béjart 
Ballet Lausanne.</string>
    <string name="about_text_dialects_luzern">Luzern (ger ; eng/fre: Lucerne; ita/roh: 
Lucerna) — main medievial city of the 
Central region with direct water links to all 
of the early Swiss historic sights at the end 
of the many branched lake Lucerne 
(Vierwaldstättersee ends into the river 
Reuss) along of many steep mountains; 
also famous for its tremendous and ethnic 
carnival (Lozärner Fasnacht) around 
February; host of the world-renowned 
Lucerne Festivals, a classical summer music 
festival in the Culture and Congress Centre 
(KKL) designed by Jean Nouvel; starting 
point for many excursions into the Alps.</string>
    <string name="about_text_dialects_lugano">Lugano (ita/eng/ger/fre/roh) — a bustling 
old-town in Italian-spoken Switzerland, at 
the southern end of the Alps with a 
Mediterranean climate at the pretty lake of 
Lugano in the middle of forested 
mountains; much Italianata combined with 
Swiss seriousness.</string>
    <string name="about_text_dialects_stgallen">St. Gallen (ger (also: Sankt Gallen); eng: 
St. Gall; fre: Saint-Gall; ita: San Gallo; roh: 
Son Gagl) — main city of north-eastern 
Switzerland, renowned for its Abbey of 
St. Gall, a UNESCO World Heritage Site and 
its library contains books which date back 
to the 9th century, it also functions as the 
gate to the very exclusive Appenzell region.</string>
    <string name="about_text_dialects_zurich">Zurich (eng/fre; ger: Zürich; ita: Zurigo; 
roh: Turitg) — largest city of Switzerland at 
the end of Lake Zurich (ends into the river 
Limmat), a major centre of international 
banking and national major companies and 
media; great culture &#38; arts possibilities; 
more than 50 museums and around 100 
galleries; great restaurants (more than 
1500) and bars (more than 500); excellent 
cinema selection (~60 show rooms); has a 
thriving nightlife (~80 clubs on weekends); 
host of the largest European party rave 
Street Parade in August with almost 
1 million visitors every year; renowned 
opera, excellent theatre; host of the 
renowned theatre festival Zürcher Theater 
Spektakel during August; every third 
inhabitant is a foreigner.</string>
    <string name="explore_luzern_history_title_culture_chapel">CHAPEL BRIDGE</string>
    <string name="explore_luzern_history_subtitle_culture_chapel">The town\'s landmark</string>
    <string name="explore_luzern_history_text_culture_chapel">Constructed in first half of the 14th century 
as a part of the city\'s fortifications and
named after St. Peter\'s Chapel, which is 
located nearby.
\n \n
The paintings that were added in the 17th 
century illustrate scenes of Swiss and local 
history, including the biographies of the 
city\'s patron saints, St. Leodegar and St. 
Maurice.</string>
    <string name="explore_luzern_history_title_culture_tower">WATER TOWER</string>
    <string name="explore_luzern_history_subtitle_culture_tower">Archive, treasury and prison</string>
    <string name="explore_luzern_history_text_culture_tower">This octagonal tower - over 34 meters high 
(111.5 ft.) - was built around 1300 as part 
of the city wall and used as an archive, 
treasury, prison and torture chamber.
\n \n
It is Lucerne\'s landmark and the most 
frequently photographed monument in 
Switzerland.</string>
    <string name="explore_luzern_history_title_culture_lion">LION MONUMENT</string>
    <string name="explore_luzern_history_text_culture_lion">Constructed in first half of the 14th century 
as a part of the city\'s fortifications and
named after St. Peter\'s Chapel, which is 
located nearby.
\n \n
The paintings that were added in the 17th 
century illustrate scenes of Swiss and local 
history, including the biographies of the 
city\'s patron saints, St. Leodegar and St. 
Maurice.</string>
    <string name="explore_luzern_stay_title_lucerne">RENAISSANCE LUCERNE HOTEL</string>
    <string name="explore_luzern_stay_adress_lucerne">www.marriott.de</string>
    <string name="explore_luzern_stay_phone_lucerne">+41 41 226 87 87</string>
    <string name="explore_luzern_stay_title_alpina">HOTEL ALPINA</string>
    <string name="explore_luzern_stay_adress_alpina">www.alpina-luzern.ch</string>
    <string name="explore_luzern_stay_textadress_lucerne">Pilatussstrasse 15, Lucerne, Switzerland</string>
    <string name="explore_luzern_stay_textadress_alpina">Frankenstrasse 6, Lucerne, Switzerland</string>
    <string name="explore_luzern_stay_phone_alpina">+41 41 210 00 77</string>
    <string name="explore_luzern_stay_title_hotel">THE HOTEL</string>
    <string name="explore_luzern_stay_adress_hotel">the-hotel.ch</string>
    <string name="explore_luzern_stay_textadress_hotel">Sempacherstrasse 14, Lucerne, Switzerland</string>
    <string name="explore_luzern_stay_phone_hotel">+41 41 226 86 86</string>
    <string name="explore_luzern_stay_title_cascada">CASCADA SWISS QUALITY HOTEL</string>
    <string name="explore_luzern_stay_adress_cascada">www.cascada.ch</string>
    <string name="explore_luzern_stay_textadress_cascada">Bundesplatz 18, Lucerne, Switzerland</string>
    <string name="explore_luzern_stay_phone_cascada">+41 41 226 80 88</string>
</resources>