<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/explore_lu_culture_chapelbridge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:adjustViewBounds="true"
        android:src="@drawable/luzern_historyandculture_img_a" />

    <TextView
        android:id="@+id/explore_lu_history_title_culture_chapel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/explore_luzern_history_title_culture_chapel"
        android:textColor="@color/RedExplore"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/explore_luzern_history_subtitle_culture_chapel"
        android:textColor="@color/gray"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/explore_luzern_history_text_culture_chapel"
        android:textColor="@color/gray" />

    <ImageView
        android:id="@+id/explore_lu_culture_watertower"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:adjustViewBounds="true"
        android:src="@drawable/luzern_historyandculture_img_b" />

    <TextView
        android:id="@+id/explore_lu_history_title_culture_tower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/explore_luzern_history_title_culture_tower"
        android:textColor="@color/RedExplore"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/explore_luzern_history_subtitle_culture_tower"
        android:textColor="@color/gray"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/explore_luzern_history_text_culture_tower"
        android:textColor="@color/gray" />

    <ImageView
        android:id="@+id/explore_lu_culture_lionmonument"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:adjustViewBounds="true"
        android:src="@drawable/luzern_historyandculture_img_c" />

    <TextView
        android:id="@+id/explore_lu_history_title_culture_lion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/explore_luzern_history_title_culture_lion"
        android:textColor="@color/RedExplore"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/explore_luzern_history_subtitle_culture_chapel"
        android:textColor="@color/gray"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/explore_luzern_history_text_culture_lion"
        android:textColor="@color/gray" />

</LinearLayout>