<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/explore_lu_stay_scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/explore_bg_image"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/luzerne_main_img" />

            <TextView
                android:id="@+id/action_bar_shadow_explore_stay"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:background="@drawable/a_shadow" />

            <Button
                android:id="@+id/explore_luzern_btn_basic_stay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/explore_bg_image"
                android:layout_alignParentRight="true"
                android:background="@drawable/explore_luzern_btn_basic_bg_xml"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:onClick="openDefault" />
            
            
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp" >
            
            <TextView
                android:id="@+id/explore_lu_stay_title_renaissancelucernehotel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/explore_luzern_stay_title_lucerne"
                android:textColor="@color/RedExplore"
                android:textSize="18sp"
                android:textStyle="bold" />
            
            <TextView 
                android:id="@+id/explore_lu_stay_adress_lucerne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/explore_luzern_stay_adress_lucerne"
                android:clickable="true"
                android:onClick="openAdress"/>
            <ImageView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:src="@drawable/luzern_stay_stars_b"
                android:adjustViewBounds="true"/>
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/explore_luzern_stay_textadress_lucerne"
                android:textColor="@color/gray" />
            
            <TextView
                android:id="@+id/explore_lu_stay_phone_lucerne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/explore_luzern_stay_phone_lucerne"
                android:textColor="@color/gray"
                android:clickable="true"
                android:onClick="openPhone" />
            
            <TextView
                android:id="@+id/symbols_seperator_1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:background="@color/RedExplore" />
            
            
            <TextView
                android:id="@+id/explore_lu_stay_title_hotelalpina"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/explore_luzern_stay_title_alpina"
                android:textColor="@color/RedExplore"
                android:textSize="18sp"
                android:textStyle="bold" />
            
            <TextView 
                android:id="@+id/explore_lu_stay_adress_alpina"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/explore_luzern_stay_adress_alpina"
                android:clickable="true"
                android:onClick="openAdress"/>
            <ImageView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:src="@drawable/luzern_stay_stars_c"
                android:adjustViewBounds="true"/>
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/explore_luzern_stay_textadress_alpina"
                android:textColor="@color/gray" />
            
            <TextView
                android:id="@+id/explore_lu_stay_phone_alpina"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/explore_luzern_stay_phone_alpina"
                android:textColor="@color/gray"
                android:clickable="true"
                android:onClick="openPhone" />
            
            <TextView
                android:id="@+id/symbols_seperator_2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:background="@color/RedExplore" />
            
            <TextView
                android:id="@+id/explore_lu_stay_title_thehotel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/explore_luzern_stay_title_hotel"
                android:textColor="@color/RedExplore"
                android:textSize="18sp"
                android:textStyle="bold" />
            
            <TextView 
                android:id="@+id/explore_lu_stay_adress_hotel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/explore_luzern_stay_adress_hotel"
                android:clickable="true"
                android:onClick="openAdress"/>
            
            <ImageView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:src="@drawable/luzern_stay_stars_a"
                android:adjustViewBounds="true"/>
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/explore_luzern_stay_textadress_hotel"
                android:textColor="@color/gray" />
            
            <TextView
                android:id="@+id/explore_lu_stay_phone_hotel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/explore_luzern_stay_phone_hotel"
                android:textColor="@color/gray"
                android:clickable="true"
                android:onClick="openPhone" />
            
            <TextView
                android:id="@+id/symbols_seperator_3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:background="@color/RedExplore" />
            
            <TextView
                android:id="@+id/explore_lu_stay_title_cascadaswissqualityhotel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/explore_luzern_stay_title_cascada"
                android:textColor="@color/RedExplore"
                android:textSize="18sp"
                android:textStyle="bold" />
            
            <TextView 
                android:id="@+id/explore_lu_stay_adress_cascada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/explore_luzern_stay_adress_cascada"
                android:clickable="true"
                android:onClick="openAdress"/>
            
            <ImageView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:src="@drawable/luzern_stay_stars_b"
                android:adjustViewBounds="true"/>
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/explore_luzern_stay_textadress_cascada"
                android:textColor="@color/gray" />
            
            <TextView
                android:id="@+id/explore_lu_stay_phone_cascada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/explore_luzern_stay_phone_cascada"
                android:textColor="@color/gray"
                android:clickable="true"
                android:onClick="openPhone" />
            
        </LinearLayout>
    </LinearLayout>

</ScrollView>